Quitamos el paquete mandi

--- a/src/convenio.tex
+++ b/src/convenio.tex
@@ -7,9 +7,9 @@
         \toprule
         Constante & Nomenclatura & Valor & Unidades\\
         \midrule
-        Velocidad de la luz en el vacio & $\speedoflightmathsymbol$ & $\speedoflightprecisevalue$ & $\speedoflightonlyalternateunits$\\
-        Planck & $\planckmathsymbol$ & $\planckprecisevalue$ & $\planckonlyalternateunits$\\
-        Dirac & $\planckbarmathsymbol=\planckmathsymbol/(2\pi)$ & $\planckbarprecisevalue$ & $\planckbaronlyalternateunits$\\
+        Velocidad de la luz en el vacio & $\speedoflightsymbol$ & $\speedoflightvalue$ & $\speedoflightounits$\\
+        Planck & $\plancksymbol$ & $\planckvalue$ & $\planckunits$\\
+        Dirac & $\planckbarsymbol=\plancksymbol/(2\pi)$ & $\planckbarvalue$ & $\planckbarunits$\\
         \bottomrule
     \end{tabular}
 \end{table}
