--- a/src/main.tex
+++ b/src/main.tex
@@ -1,8 +1,6 @@
 \documentclass[11pt,fancy]{elegantbook}
 
 \usepackage{tikz-cd}
-\usepackage{mandi}
-\usepackage{mandistudent}
 \input{personalizacion.tex}
 
 \title{Apuntes en mecánica cuántica}
@@ -46,8 +44,9 @@
 
     %\input{operadores.tex}
 
-    \input{formulario.tex}
+    \input{basico_analisis.tex}
 
+    \input{formulario.tex}
 
     %\input{elegantbook.tex}
     \printbibliography
