--- a/src/mecanica_hamiltoniana.tex
+++ b/src/mecanica_hamiltoniana.tex
@@ -4,10 +4,10 @@ Ahora vamos a considerar el punto de vista de la mecánica clásica a través de
 El hamiltoniano es considerar la energía del sistema como variables de la posición y del momento.
 
 \begin{definition}[Hamiltoniano]
-    Se define el \define{hamiltoniano}{Hamiltoniano} de un sistema como 
+    Se define el \define{hamiltoniano}{Hamiltoniano} de un sistema como
     \begin{equation}
         \label{hamiltoniano}
-        H(x,p)=\frac{1}{2m}\sum_{i=1}^{n} p_i^2 +V(x)
+        H(x,p)=T+V=\frac{1}{2}\sum_{i=1}^{n} p_i^2 +V(x)
     \end{equation}
 
 \end{definition}
@@ -23,11 +23,3 @@ Bajo esta expresión, obtenemos las ecuaciones de Halmiton
         \end{equation}
     \end{subequations}
 \end{postulate}
-
-\begin{definition}
-    Sean $f$ y $g$ dos funciones sobre $\R^{2n}$, sean $x,y\in\R$, llamamos \define{corchete de Poisson}{Corchete de Poisson} a
-    \begin{equation}
-        \label{def:corchete_poisson}
-        \left\{f,g \right\}(x,y) =\sum_{i=1}^{n}(\frac{\partial f}{\partial x_i}\frac{\partial g}{\partial y_i}-\frac{\partial f}{\partial y_i}\frac{\partial g}{\partial x_i})
-    \end{equation}
-\end{definition}
