--- a/src/ecuación de Schrödinger.tex
+++ b/src/ecuación de Schrödinger.tex
@@ -11,13 +11,14 @@ La \define{ecuación de Schrödinger}{ecuacion_de_schrodinger}, describe la evol
     \end{equation}
 \end{postulate}
 
-\section{Propiedades de las soluciones a la ecuación de Schrödinger}
+\section{Propiedades de las soluciones a la ecuación de Schrödinger}\label{sec:propiedades-de-las-soluciones-a-la-ecuación-de-schrödinger}
 
-\subsection{Linealidad}
-Es fácil comprobar que si $\Psi_1$ y $\Psi_2$ son funciones de onda para un potencial $V(x,t)$ y $a\in\C$, entonces $\Psi_1+\Psi_2$ y $a\Psi$ son ambos funciones de onda para el mismo potencial $V(x,t)$. En cuanto a la conjugada tenemos que $\Psi^*_1$ es el opuesto a la solución de la ecuación de onda del conjudado del potencial, es decir
+\subsection{Linealidad}\label{subsec:linealidad}
+Es fácil comprobar que si $\Psi_1$ y $\Psi_2$ son funciones de onda para un potencial $V(x,t)$ y $a\in\C$, entonces $\Psi_1+\Psi_2$ y $a\Psi$ son ambos funciones de onda para el mismo potencial $V(x,t)$.
+En cuanto a la conjugada tenemos que $\Psi^*_1$ es el opuesto a la solución de la ecuación de onda del conjudado del potencial, es decir
 
 \begin{equation}
-    \label{ecuacion_schrodinger_conjugada}
+    \label{eq:ecuacion_schrodinger_conjugada}
     \frac{\partial\Psi^*(\vec{r},t)}{\partial t}=\frac{-i\hbar}{2m}\nabla\Psi^*(\vec{r},t)+\frac{i}{\hbar}V^*(\vec{r},t)\Psi^*(\vec{r},t)
 \end{equation}
 
@@ -27,7 +28,7 @@ Si la función de onda sólo depende del tiempo, la ecuación~\ref{eq:ecuacion_s
 \subsubsection{Solución espacial}
 Si la función de onda sólo depende del espacio, la ecuación~\ref{eq:ecuacion_schrodinger} queda como $0=-i\hbar/(2m)\nabla\Psi(\vec{r})+V(\vec{r})\Psi(\vec{r})$, es decir $\nabla\Psi(\vec{r})=-i2m/\hbar V(\vec{r})\Psi(\vec{r})$.
 
-\subsection{Estados estacionarios}
+\subsection{Estados estacionarios}\label{subsec:estados-estacionarios}
 Vamos a estudiar un caso muy especial, donde el potencial no depende del tiempo y donde la solución es el producto de una solución espacial y otra temporal, simplificaremos las ecuaciones tomando una sola variable, es decir $\Psi(x,t)=f(x)g(t)$, la ecuación~\ref{eq:ecuacion_schrodinger} queda como $f(x)g'(t)=i\hbar/(2m)f''(x)g(t)-i/\hbar V(x)f(x)g(t)$.
 
 
@@ -41,7 +42,8 @@ Para algún punto del espacio $x_0$ la función $f$ se anula, es decir, $0=f''(x
 
 \textbf{Caso 3.}
 
-Nunca se anulan las funciones, podemos entonces dividir en todo momento la ecuación anterior por $f(x)g(t)$, quedando la ecuación $g'(t)/g(t)=i\hbar/(2m)f^{\prime\prime}(x)/f(x)-i/\hbar V(x)$. Teniendo que una expresión temporal es igual a una expresión espacial para todo tiempo y todo espacio, esto es posible si ambas expresiones son constantes en tiempo y espacio, y deben cumplirse a la vez que para algún $C\in\C$
+Nunca se anulan las funciones, podemos entonces dividir en todo momento la ecuación anterior por $f(x)g(t)$, quedando la ecuación $g'(t)/g(t)=i\hbar/(2m)f^{\prime\prime}(x)/f(x)-i/\hbar V(x)$.
+Teniendo que una expresión temporal es igual a una expresión espacial para todo tiempo y todo espacio, esto es posible si ambas expresiones son constantes en tiempo y espacio, y deben cumplirse a la vez que para algún $C\in\C$
 \begin{gather*}
     \frac{g'(t)}{g(t)}=C\Rightarrow g(t)=e^{Ct}
     \\
@@ -56,7 +58,7 @@ Nunca se anulan las funciones, podemos entonces dividir en todo momento la ecuac
     \begin{equation*}
         \nor{\Psi(x,t)}^2=\Psi^*(x,t)\Psi(x,t)=f^*(x)g^*(t)f(x)g(t)=\nor{f(x)}^2\nor{g(t)}^2
     \end{equation*}
-    Usando la ecuación \ref{ecuacion_probabilidad_onda} tenemos que
+    Usando la ecuación~\ref{eq:ecuacion_probabilidad_onda} tenemos que
     \begin{equation*}
         1=\int_{-\infty}^{+\infty}\nor{\Psi(x,t)}^2 dx=\nor{g(t)}^2\int_{-\infty}^{+\infty}\nor{f(x)}^2 dx
     \end{equation*}
@@ -69,7 +71,7 @@ Nunca se anulan las funciones, podemos entonces dividir en todo momento la ecuac
 \begin{proof}
     Como hemos visto en el resultado anterior, $\nor{g(t)}^2=1$, y por tanto
     \begin{equation}
-        \label{probabilidad_atemporal}
+        \label{eq:probabilidad_atemporal}
         \nor{\Psi(x,t)}^2=\nor{f(x)}^2\nor{g(t)}^2=\nor{f(x)}^2
     \end{equation}
 \end{proof}
@@ -83,15 +85,15 @@ Así que $C=iD$ con $D\in\R$, las soluciones al estado estacionario queda como
 \subsubsection{Hamiltoniano}
 Si consideramos el conjunto de la energía cinética más la energía potencial, obtenemos lo que llamamos el \define{Hamiltoniano} y tiene la expresión
 \begin{equation}
-    \label{halmitoniano}
+    \label{eq:halmitoniano}
     H(x,p)=\frac{p^2}{2m}+V(x)
 \end{equation}
 Llamamos \define{operador Hamiltoniano} al operador definido por
 \begin{equation}
-    \label{operador_hamiltoniano}
+    \label{eq:operador_hamiltoniano}
     \widehat{H}=-\frac{\hbar^2}{2m}\frac{\partial^2}{\partial x^2}+V(x)
 \end{equation}
-Usando el operador Hamiltoniano en la ecuación \ref{ecuacion_schrodinger_tempoespacial} podemos expresarlo así
+Usando el operador Hamiltoniano en la ecuación~\ref{eq:ecuacion_schrodinger_tempoespacial} podemos expresarlo así
 \begin{equation*}
     \widehat{H}f(x)=-i\hbar Df(x)
 \end{equation*}
@@ -105,14 +107,14 @@ Para simplificar la expresión llamamos $E=-\hbar D$ y por tanto las soluciones 
 \begin{definicion}
     Llamamos \define{Ecuación de Schrödinger independiente del tiempo} a la ecuación solución de la parte espacial del estado estacionario
     \begin{equation}
-        \label{ecuacion_schrodinger_tempoespacial}
+        \label{eq:ecuacion_schrodinger_tempoespacial}
         -\frac{\hbar^2}{2m}f''(x)+V(x)f(x)= Ef(x)
     \end{equation}
 \end{definicion}
 
 Resolviendo la ecuación diferencial temporal y usando el operador de Halmiton podemos dejar las soluciones de estados estacionarios como
 \begin{equation}
-    \label{solucion_estado_estacionario}
+    \label{eq:solucion_estado_estacionario}
     \Psi(x,t)=f(x)g(t)\text{ donde }
     \begin{cases}
         g(t)=e^{-iEt/\hbar}\\
@@ -121,12 +123,12 @@ Resolviendo la ecuación diferencial temporal y usando el operador de Halmiton p
     \end{cases}
 \end{equation}
 
-\subsection{Observaciones a las soluciones del estado estacionario}
+\subsection{Observaciones a las soluciones del estado estacionario}\label{subsec:observaciones-a-las-soluciones-del-estado-estacionario}
 
 \subsubsection{Solución general}
 La solución general del estado estacionario se puede expresar como
 \begin{equation}
-    \label{solucion_general_estado_estacionario}
+    \label{eq:solucion_general_estado_estacionario}
     \Psi(x,t)=\sum_{k\in\N}c_k f_k(x)e^{-iE_k t/\hbar}
 \end{equation}
 Donde $\forall k\in\N$ $E_k\in\R$ y $\widehat{H}f_k(x)=E_k f_k(x)$
