--- a/src/formulario.tex
+++ b/src/formulario.tex
@@ -1,20 +1,5 @@
 \chapter{Formulario}\label{ch:formulario}
-En este capítulo vamos a recoger todas las ecuaciones, fórmulas, resultados que hemos usado de forma ?
-
-\section{Análisis matemático}\label{sec:analisis-matematico}
-
-\subsection{Polinomio de Taylor}\label{subsec:polinomio-de-taylor}
-Sea $f$ una función real definido en un intervalo abierto y $x_0$ un número del dominio, existe $\epsilon>0\in\R$ tal que $\forall\ x\in(x_0-\epsilon\coma x_0+\epsilon)$ se tiene que
-\begin{equation}
-    \label{eq:polinomio-taylor}
-    f(x)=\sum_{n=0}^{\infty} \frac{f^{(n)}(x_0)}{n !}(x-x_0)^n
-\end{equation}
-
-Sea $f$ una aplicación de $\R^2$ en $\R^2$, definido en un intervalo abierto y $(x_0, y_0)$ un elemento del dominio, existe $\epsilon > 0 \in\R$ tal que $\forall\ (x, y)\in(x_0-\epsilon\coma x_0+\epsilon)\times(y_0-\epsilon, y_0+\epsilon)$ se tiene que
-\begin{equation}
-    \label{eq:polinomio-taylor-dos-variables}
-    f(x,y)=\sum_{n=0}^{\infty} \sum_{m=0}^{\infty} \frac{\partial^{n+m}f(x_0, y_0)}{\partial^n x\partial^m y}\frac{(x-x_0)^n(y-y_0)^m}{n!m!}
-\end{equation}
+En este capítulo vamos a recoger todas las ecuaciones, fórmulas, resultados que hemos usado de forma habitual.
 
 \section{Ecuaciones diferenciables}\label{sec:ecuaciones-diferenciables}
 \subsection{Polinomio de segundo grado}\label{subsec:polinomio-de-segundo-grado}
