--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -35,3 +35,28 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \providecommand{\vec}[1]{\overrightarrow{#1}}
 \newcommand{\set}[1]{\left\{#1\right\}}
 \newcommand{\where}{\mathrel{}\middle|\mathrel{}}
+
+\renewcommand*{\hbar}{{\mkern-1mu\mathchar'26\mkern-8mu\mathrm{h}}}
+\newcommand{\c}{\mathrm{c}}
+\newcommand{\h}{\mathrm{h}}
+% From mandi package
+\newcommand{\usk}{\cdot}
+\newcommand{\kilogram}{\mathrm{kg}}
+\newcommand{\meter}{\mathrm{m}}
+\newcommand{\second}{\mathrm{s}}
+\newcommand{\inverse}{^{-1}}           % postfix -1
+\newcommand{\tothetwo}{^2}             % postfix  2
+\newcommand{\tothethree}{^3}           % postfix  3
+\newcommand{\tothefour}{^4}            % postfix  4
+\newcommand{\tento}[1]{10^{#1}}
+\newcommand{\xtento}[1]{\times\tento{#1}}
+% speedoflight
+\providecommand{\speedoflightsymbol}{\c}
+\providecommand{\speedoflightvalue}{2.99792458\times10^{8}}
+\providecommand{\speedoflightounits}{\meter\usk\second\inverse}
+\providecommand{\plancksymbol}{\h}
+\providecommand{\planckvalue}{6.62607015\times10^{-34}}
+\providecommand{\planckunits}{\kilogram\usk\meter\tothetwo\usk\second\inverse}
+\providecommand{\planckbarsymbol}{\hbar}
+\providecommand{\planckbarvalue}{1.054571817\times10^{-34}}
+\providecommand{\planckbarunits}{\kilogram\usk\meter\tothetwo\usk\second\inverse}
