Fin de mecánica lagrangian y hamiltoniana

--- a/src/main.tex
+++ b/src/main.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,fancy]{elegantbook}
 
 \usepackage{tikz-cd}
+\usepackage{cancel}
 \input{personalizacion.tex}
 
 \title{Apuntes en mecánica cuántica}
