--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -68,3 +68,4 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \providecommand{\planckbarsymbol}{\hbar}
 \providecommand{\planckbarvalue}{1.054571817\times10^{-34}}
 \providecommand{\planckbarunits}{\kilogram\usk\meter\tothetwo\usk\second\inverse}
+\newcommand\ct[1]{\text{\rmfamily\upshape #1}}
